Use Java 17 string formatter